streamlined and cleaned code